--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Chào mừng đến <span>BLearning</span></h2>
           <p class="animate__animated animate__fadeInUp">ĐA DẠNG - THÔNG MINH - CHÍNH XÁC</p>
+          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Tải về phần mềm chấm thi</a>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Tin tức, thông báo</a>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Trắc nghiệm Tin Học</a>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Xem lịch sử làm bài</a>
